# app

./: .env.example  .gitignore  CLAUDE.md  info.md  pyproject.toml  repo_split_plan.md
agent/: __init__.py  config.py  graph.py  history.py  mcp.py  memory.py  session.py
agent/adapters/: __init__.py
agent/adapters/langchain/: __init__.py  context.py  explore.py  rag_tools.py  search.py
agent/cli/: __init__.py  chat.py  eval.py  prompting.py  slash_commands.py
agent/evaluation/: __init__.py  base.py  behavior.py  endtoend.py
agent/history_rag/: __init__.py  store.py  tool.py
agent/llm/: __init__.py  base.py  ollama.py  openrouter.py
env/: env-app.yml  pyproject.toml
eval/: behavior_results.json  behavior_results_20260411_1908.json  e2e_cases_20260411_1915.json  e2e_results_20260411_1915.json
kms/: __init__.py  api.py  config.py
kms/adapters/: __init__.py
kms/adapters/langchain/: __init__.py  context.py  explore.py  search.py
kms/agent/: __init__.py  graph.py  history.py  session.py  state.py
kms/chunker/: __init__.py  base.py  token.py
kms/cli/: chat.py  eval.py  ingest.py  query.py
kms/embedder/: __init__.py  ollama.py
kms/evaluation/: __init__.py  base.py  behavior.py  endtoend.py  retrieval.py
kms/llm/: __init__.py  base.py  ollama.py  openrouter.py
kms/retriever/: __init__.py  base.py  vector.py
kms/store/: __init__.py  chroma_store.py  document_store.py  json_store.py
kms/tagger/: __init__.py  base.py  llm_tagger.py
kms/tool/: __init__.py  base.py  context.py  explore.py  search.py
kms_agent/: __init__.py
kms_agent/adapters/: __init__.py
kms_agent/adapters/langchain/: __init__.py  explore.py  search.py
kms_agent/agent/: __init__.py  graph.py  history.py  session.py  state.py
kms_agent/cli/: __init__.py  chat.py  eval.py
kms_agent/evaluation/: __init__.py  base.py  behavior.py  endtoend.py
note/20260411/: report.md
note/20260413/: agent_state_cleanup.md
note/20260420/: mcp_setup.md
store/eval/: behavior_cases.json  e2e_cases.json  e2e_results.json
tests/: test_adapter_formatting.py  test_behavior_eval.py  test_chat_cli.py  test_e2e_eval.py  test_eval_runtime.py  test_history.py  test_history_rag_store.py  test_history_rag_tool.py  test_mcp.py  test_memory.py  test_session_eviction.py  test_slash_commands.py  test_smoke.py
